# antimony

./: -  .Dockerignore  .dockerignore  .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Parser.ts  README.md  TODO  Tokenizer.ts  a.out  book.toml  build.rs  build_docs.py  grammar.js  index.html  index.js  index.ts  main  main.c  ops  package-lock.json  package.json  parsing.js  parsing.ts  playground.js  print.html  rust-toolchain.toml  searcher-c2a407aa.js  searchindex-11993848.js  searchindex.js  searchindex.json  syntax.js  test  (+8 more)
.builds/: ci.yml
.github/: FUNDING.yml  pull_request_template.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
builtin/: README.md  builtin.c  builtin.js  builtin.ssa  builtin_qbe.c
cli/: index.js
concepts/: SUMMARY.html  comments.html  control-flow.html  datatypes.html  functions.html  structured-data.html  variables.html
contrib/: PKGBUILD  prerelease_check.sh
developers/: SUMMARY.html  ast-design.html  backends.html  debugging.html  releasing.html  specification.html
docs/: SUMMARY.md
examples/: ackermann.sb  args.sb  bubblesort.sb  fib.sb  greeter.sb  hello_world.fx  hello_world.sb  leapyear.sb  loops.sb  math.fx  playground.sb  sandbox.sb
examples_out/: out.asm  out.js
examples_out_c/: ackermann  ackermann.c  bubblesort  bubblesort.c  fib  fib.c  greeter  greeter.c  hello_world  hello_world.c  leapyear  leapyear.c  sandbox  sandbox.c
introduction/: SUMMARY.html  hello-world.html  installation.html
latest/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-d2c2f215.js  searchindex.js  searchindex.json  toc.html  toc.js
lib/: array.sb  assert.sb  env.sb  io.sb  math.sb  os.sb  stdio.sb  stdlib.sb  string.sb
modules/: SUMMARY.html
src/: main.rs
tests/: arrays.sb  conditionals.sb  function_return_type_explicit.sb  functions.sb  if_statement_basic.sb  if_statement_multiple_arms.sb  if_statement_non_boolean_condition.sb  imports.sb  (+9 more)
(+164 files in other folders)
