[package]
name = "antimony-lang"
version = "0.7.0"
authors = ["Garrit Franke <garrit@slashdev.space>"]
description = "The Antimony programming language"
license = "Apache-2.0"
documentation = "https://antimony-lang.github.io/antimony"
repository = "https://github.com/antimony-lang/antimony"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sb"
path = "src/main.rs"

[features]
llvm = ["inkwell"]

[dependencies]
structopt = "0.3.26"
rust-embed = "5.7.0"
inkwell = { version = "0.2.0", features = ["llvm10-0"], optional = true }
qbe = "1.0.0"
regex = "1.9.4"
lazy_static = "1.4.0"
