[package]
name = "antimony-lang"
version = "0.9.0"
authors = ["Garrit Franke <garrit@slashdev.space>"]
description = "The Antimony programming language"
license = "Apache-2.0"
documentation = "https://antimony-lang.github.io/antimony"
repository = "https://github.com/antimony-lang/antimony"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
rust-embed = "8.11.0"
qbe = "4.0.0"
lazy_static = "1.5.0"
